# keprompt

./: .gitignore  CLAUDE.md  Development.md  MANIFEST.in  MIGRATION.md  PYPI_RELEASE_PREP.md  README.md  RELEASE_NOTES_v1.4.0.md  TUI_README.md  example.env  llm_connectivity_test_20250724_132749.txt  print_test.txt  pyproject.toml  release.py  requirements.txt  setup.py  t.html  test_llm_connectivity.py  test_logging_demo.md
TES/: Fuel+terminal+BOLs.md  Kavon_notes.md
V3/: KePrompt_V3.md
conversations/: MathTutor-1.conversation  test-fix.conversation
docs/: Developmet.md  EXAMPLES.md  PromptLanguage.md  QUICK_REFERENCE.md  README.md  TUTORIAL.md
history/: ENHANCED_MODEL_TABLE_SUMMARY.md  MODEL_UPDATES_SUMMARY.md  USER_DEFINED_FUNCTIONS_RELEASE.md
keprompt/: AiAnthropic.py  AiCerebras.py  AiDeepSeek.py  AiGoogle.py  AiMistral.py  AiOpenAi.py  AiOpenRouter.py  AiPrompt.py  AiProvider.py  AiRegistry.py  AiXai.py  CustomEncoder.py  ModelManager.py  Prompt.py  __init__.py  api.py  chat_manager.py  chat_viewer.py  config.py  conversation_viewer.py  cost_cli.py  cost_tracker.py  database.py  db_cli.py  http_server.py  json_api.py  json_utils.py  keprompt.py  keprompt_aiprompt.py  keprompt_api_config.py  keprompt_builtins.py  keprompt_function_space.py  keprompt_functions.py  keprompt_kestep.py  keprompt_logger.py  keprompt_models.json  keprompt_prompt.py  keprompt_util.py  keprompt_vm.py  model_updater.py  (+6 more)
ks/: 01-overview.md  01-prompt-language.md  02-cli-interface.md  02-knowledge-engineers-guide.md  03-prompt-language.md  03-statements-and-messages.md  04-web-gui.md  05-knowledge-engineers-guide.md  README.md  architecture.md  conversation-management.md  core-concepts.md  creating-keprompt-functions.context.md  development-patterns.md  directory-architecture.md  keprompt-llm-reference.md  key-decisions.md  project-overview.md
old/: tbd_session_manager.py
ontology/: terms-draft.md
prompts/: Anthropic.prompt  BOL.prompt  CreatePageDrawing.prompt  CutOffDate.prompt  Imperial-KM.prompt  OKC-Magellan.prompt  Phoenix-KM.prompt  Reno-Golden_Gate.prompt  Test.prompt  Vegas-Holly.prompt  Vegas-KM.prompt  Vegas-Pro.prompt  chats.db  costs.db  hi.prompt  sessions.db  simple_test.prompt
steps/: Phoenix-Caljet.prompt  Phoenix-Mesa_Transload.prompt  Tucson-KM.prompt  Vegas-Pro.prompt  Xai.prompt
task/: cost-tracking-data-requirements.md  cost-tracking-requirements.md  cost-tracking-usage-guide.md  current-cost-storage-analysis.md
test/: ExampleAPI.json  hi_messages.json  test_function_specs.py  test_json_envelope.py
(+89 files in other folders)
