[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keprompt"
dynamic = ["version"]
description = "A prompt engineering tool for large language models"
readme = "README.md"
authors = [
    {name = "Jerry Westrick", email = "jerry@westrick.com"}
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "rich_argparse>=1.0.0",
    "requests>=2.31.0",
    "textual>=0.41.0",
    "toml>=0.10.2",
    "peewee>=3.17.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "markdown-it-py>=3.0.0",
]

[project.scripts]
keprompt = "keprompt.keprompt:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/JerryWestrick/keprompt"
Documentation = "https://github.com/JerryWestrick/keprompt/tree/main/ks"
Repository = "https://github.com/JerryWestrick/keprompt"
Issues = "https://github.com/JerryWestrick/keprompt/issues"

[tool.setuptools.package-data]
keprompt = ["web_gui/*", "defaults/functions/*"]

[tool.setuptools.dynamic]
version = {attr = "keprompt.version.__version__"}
